Fix calendar layout on small screens

--- a/css/marcius.css
+++ b/css/marcius.css
@@ -96,6 +96,10 @@ h1 {
 }
 
 #lampak {
-  width: 800px;
+  width: 80%;
   margin: 0 auto;
+}
+
+@media only screen and (min-width: 816px) {
+  #lampak {width: 800px;}
 }
